# DITerm

./: CMakeLists.txt  README.md  main.cpp
include/: convert.hpp  printCC.hpp  readImage.hpp  structure.hpp
src/: convert.cpp  printCC.cpp  readImage.cpp
